GETs results for wallets >1 degree of separation from sourceWallet. In theory. Problems occur at 3 degrees (layers). Changed graph colours. 3 layers do not fit within viewbox. this could be due to errors with the data being recieved. Will try filtering curr_data before it is added to all_data to avoid duplicates. Next steps also are to add on click events

--- a/public/visualisation/visualisation.css
+++ b/public/visualisation/visualisation.css
@@ -1,7 +1,3 @@
-.node {
-    stroke-width: 1.5px;
-}
-
-.link {
-    stroke-opacity: 0.6;
+#root {
+    background-color: black;
 }
